<resources>
    <string name="app_name">Knell</string>
    <string name="choose_date">点击选择你的生日</string>
    <string name="save_over">保存完毕</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="label_clear">Clear</string>
    <string name="survived">You have already survived in this world</string>
    <string name="welcome_tips">除了时间，什么也没有  除了时间我什么也不缺</string>
</resources>